force-app/main/default/objects/Skills__c/Skills__c.object-meta.xml
<CustomObject>
    <label>Skills</label>
    <nameField>
        <label>Skills</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>