force-app/main/default/objects/Skills__c/fields/Estrategia__c.field-meta.xml
<CustomField>
    <fullName>Estrategia__c</fullName>
    <label>Estrategia</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estrategias</valueSetName>
    </valueSet>
</CustomField>