force-app/main/default/objects/Skills__c/fields/Evidencia_de_estudios__c.field-meta.xml
<CustomField>
    <fullName>Evidencia_de_estudios__c</fullName>
    <label>Evidencia de estudios</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evidencia_de_estudios</valueSetName>
    </valueSet>
</CustomField>