force-app/main/default/objects/Skills__c/fields/Fecha_de_expiraci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_expiraci_n__c</fullName>
    <label>Fecha de expiración</label>
    <type>Date</type>
</CustomField>