force-app/main/default/objects/Skills__c/fields/Nivel_Skill__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Skill__c</fullName>
    <label>Nivel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Niveles_de_Educaci_n</valueSetName>
    </valueSet>
</CustomField>